[gd_scene load_steps=6 format=3 uid="uid://dxsomaprdyvf2"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_ldhix"]
[ext_resource type="FontFile" uid="uid://curyo7ufmsixx" path="res://Assets/Fonts/The Bomb Sound.ttf" id="2_rowtj"]
[ext_resource type="Texture2D" uid="uid://thi4jwemhmgb" path="res://Assets/Imagenes/pantalla inicio.png" id="2_turiv"]
[ext_resource type="AudioStream" uid="uid://c7erlar3i30vu" path="res://Assets/Music/Space.ogg" id="4_xy32y"]

[sub_resource type="Theme" id="Theme_g3o2q"]
default_font = ExtResource("2_rowtj")

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ldhix")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_turiv")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -141.0
offset_right = 87.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_g3o2q")
theme_override_constants/separation = 0

[node name="Jugar" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 0.6, 0.501961, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_rowtj")
theme_override_font_sizes/font_size = 40
text = "JUGAR"
flat = true

[node name="Opciones" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 0.6, 0.501961, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_rowtj")
theme_override_font_sizes/font_size = 40
text = "OPCIONES"
flat = true

[node name="Salir" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 0.6, 0.501961, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("2_rowtj")
theme_override_font_sizes/font_size = 40
text = "SALIR"
flat = true

[node name="ColorRect" type="ColorRect" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(4.265, 38.13)
layout_mode = 2
color = Color(1, 1, 1, 0)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_xy32y")
autoplay = true

[connection signal="pressed" from="TextureRect/VBoxContainer/Jugar" to="." method="_on_jugar_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
