[gd_scene load_steps=4 format=3 uid="uid://dnvsdlw8wxrx0"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_p8061"]
[ext_resource type="Texture2D" uid="uid://b3677gibi71eh" path="res://Assets/Imagenes/pantalla inicio vacia.png" id="2_8bcpv"]
[ext_resource type="FontFile" uid="uid://curyo7ufmsixx" path="res://Assets/Fonts/The Bomb Sound.ttf" id="3_ple2r"]

[node name="Opciones" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8061")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_8bcpv")
expand_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -134.0
offset_top = -105.5
offset_right = 134.0
offset_bottom = 105.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Volumen" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 0.6, 0.501961, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_ple2r")
theme_override_font_sizes/font_size = 50
text = "VOLUMEN"
flat = true

[node name="Resolucion" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 0.6, 0.501961, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_ple2r")
theme_override_font_sizes/font_size = 50
text = "resolucion"
flat = true

[node name="Atras" type="Button" parent="TextureRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 0.6, 0.501961, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("3_ple2r")
theme_override_font_sizes/font_size = 50
text = "atras"
flat = true

[connection signal="pressed" from="TextureRect/VBoxContainer/Atras" to="." method="_on_atras_pressed"]
